--- a/app/views/process_batches/show.html.erb
+++ b/app/views/process_batches/show.html.erb
@@ -5,18 +5,18 @@
 
     <br><br>
 
-    <div class="row">
-      <div class="col-md-3 mx-auto">
+    <div class="grid grid-cols-3 gap-4">
+      <div class="mx-auto">
         <%= link_to "Export to PDF", download_pdf_process_batch_path(@process_batch), class: 'btn btn-secondary' %>
       </div>
-      <div class="col-md-3 mx-auto">
+      <div class="mx-auto">
         <% if @process_batch.batch_type == 'customer' %>
           <%= link_to "Export to CSV", download_csv_process_batch_path(@process_batch), class: 'btn btn-secondary' %>
         <% else %>
           <%= link_to "Export to CSV", download_interpreter_csv_process_batch_path(@process_batch), class: 'btn btn-secondary' %>
         <% end %>
       </div>
-      <div class="col-md-6 mx-auto">
+      <div class="mx-auto">
         <%= button_to "Delete Process Batch", process_batch_path(@process_batch), method: 'delete', class: 'btn btn-primary' %>
       </div>
     </div>
