--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,128 +1,124 @@
-<%= form_with(model: appointment) do |form| %>
+<div>
+  <% form_url = appointment.new_record? ? appointments_path : appointment_path(appointment) %>
+  <%= form_with(model: appointment, url: form_url) do |form| %>
   <%= render "shared/error_messages", resource: form.object %>
+      <div class="mt-5 md:col-span-2 md:mt-0">
+        <div class="overflow-hidden">
+          <!-- <div class="overflow-hidden shadow sm:rounded-md"> -->
+          <div class="bg-white px-4 py-5 sm:p-6">
+            <div class="grid grid-cols-6 gap-6">
+              <% if customer.blank? %>
+                <%= render partial: "customer_select" %>
+              <% else %>
+              <div class="col-span-3 sm:col-span-3">
+              <h3 class="text-tokanisecondary-700"><%= customer.name.titleize %></h3>
+            </div>
+              <div class="col-span-6 sm:col-span-6" data-controller="select-group">
+                <div class="col-span-3 sm:col-span-3">
+                  <div class="form-group">
+                    <%= form.label :site_id, class: 'block text-sm font-medium text-gray-700' %>
+                    <%= form.select :site_id, options_from_collection_for_select(sites, :id, :name, appointment.site_id), {}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'appointment_department_id'}} %>
+                  </div>
+               </div>
+                <div class="col-span-3 sm:col-span-3">
+                  <div class="form-group">
+                    <%= form.label :department_id, class: 'block text-sm font-medium text-gray-700' %>
+                    <%= form.select :department_id, options_from_collection_for_select(departments, :id, :name, appointment.department_id), {}, {disabled: @field_disabled, class: 'form-control'} %>
+                  </div>
+                </div>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :customer_id, "Agency Customer*" %>
-    <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: 'form-select' } %>
-  </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <%= form.label :start_time, class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :start_time, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", data: {controller: "flatpickr", flatpickr_enable_time: true,  flatpickr_minute_increment: 15, flatpickr_date_format: "F j, Y h:i K"} %>
+              </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <%= form.label :finish_time, class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :finish_time, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", data: {controller: "flatpickr", flatpickr_enable_time: true,  flatpickr_minute_increment: 15, flatpickr_date_format: "F j, Y h:i K"} %>
+              </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <%= form.label :details, class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_field :details, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+              </div>
+              <div class="col-span-6 sm:col-span-3">
+                <%= form.label :duration, class: "block text-sm font-medium text-gray-700" %>
+                <div class="d-flex ms-auto">
+                  <%= form.number_field :duration , class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+                  <%# form.select :duration_type, options_for_select([['Minutes', 'minutes'], ['Hour(s)', 'hours']]), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+                </div>
+              </div>
+              
+            
+              <div class="col-span-6 sm:col-span-3">
+                <div class="form-group">
+                  <%= form.label :modality, class: "block text-sm font-medium text-gray-700" %>
+                  <%= form.select :modality, options_for_select(appt_modality_options, appointment.modality), {prompt: "Please select An Modality"}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+                </div>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :interpreter_id, "Interpreter*" %>
-    <%= form.select :interpreter_id, options_from_collection_for_select(@interpreters, :id, :name), {prompt: "Please select An Interpreter"}, {class: 'form-select' } %>
-  </div>
+              <div class="col-span-6 sm:col-span-3">
+                <div class="form-group">
+                  <%= form.label :language, class: "block text-sm font-medium text-gray-700" %>
+                  <%= form.select :language_id, options_from_collection_for_select(languages, :id, :name), {prompt: "Please select A Language"}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+                </div>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :ref_number %>
-    <%= form.text_field :ref_number, class: "form-control" %>
-  </div>
+             
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <div class="form-group">
+                <%= form.label :interpreter_id, "Interpreter", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.select :interpreter_id, options_from_collection_for_select(interpreters, :id, :name), {prompt: "Please select An Interpreter"}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s"  %>
+                </div>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :start_time %>
-    <%= form.datetime_field :start_time, class: "form-control" %>
-  </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <div class="form-group">
+                <%= form.label :requestor_id, "Requestor", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.select :requestor_id, options_from_collection_for_select(requestors, :id, :name), {prompt: "Please select a Requestor"}, {class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s"} %>
+              </div>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :finish_time %>
-    <%= form.datetime_field :finish_time, class: "form-control" %>
-  </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <div class="form-group">
+                <%= form.label :provider_id, "Provider", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.select :provider_id, options_from_collection_for_select(providers, :id, :view_name), {prompt: "Please select a Provider"}, {class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" } %>
+              </div>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :duration %>
-    <%= form.number_field :duration, class: "form-control" %>
-  </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <div class="form-group">
+                <%= form.label :recipient_id, "Recipient", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.select :recipient_id, options_from_collection_for_select(recipients, :id, :view_name), {prompt: "Please select a Recipient"}, {class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" } %>
+              </div>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :modality %>
-    <%= form.number_field :modality, class: "form-control" %>
-  </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <%= form.label :notes, class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_area :notes, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+              </div>
 
-  <div class="form-group">
-    <%= form.label :sub_type %>
-    <%= form.number_field :sub_type, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :gender_req %>
-    <%= form.number_field :gender_req, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :admin_notes %>
-    <%= form.text_area :admin_notes, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :notes %>
-    <%= form.text_area :notes, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :details %>
-    <%= form.text_area :details, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :status %>
-    <%= form.check_box :status, class: "form-checkbox" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :interpreter_type %>
-    <%= form.number_field :interpreter_type, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :billing_notes %>
-    <%= form.text_area :billing_notes, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :canceled_by %>
-    <%= form.number_field :canceled_by, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :cancel_reason_code %>
-    <%= form.number_field :cancel_reason_code, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :lock_version %>
-    <%= form.number_field :lock_version, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :time_zone %>
-    <%= form.text_field :time_zone, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :confirmation_date %>
-    <%= form.datetime_field :confirmation_date, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :confirmation_phone %>
-    <%= form.text_field :confirmation_phone, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :confirmation_notes %>
-    <%= form.text_area :confirmation_notes, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :home_health_appointment %>
-    <%= form.check_box :home_health_appointment, class: "form-checkbox" %>
-  </div>
-
-  <div>
-    <%= form.button button_text(form.send(:submit_default_value)), class: "btn btn-primary" %>
-
-    <% if form.object.new_record? %>
-      <%= link_to t("cancel"), appointments_path, class: "btn btn-white" %>
-    <% else %>
-      <%= link_to t("cancel"), appointment_path(@appointment), class: "btn btn-white" %>
-    <% end %>
-  </div>
+              <div class="col-span-6 sm:col-span-6 lg:col-span-3">
+                <%= form.label :admin_notes, class: "block text-sm font-medium text-gray-700" %>
+                <%= form.text_area :admin_notes, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
+              </div>
+              
+            </div>
+            </div>
+          </br>
+           <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
+            <%= form.hidden_field :customer_id, value: @customer.id %>
+        
+              <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+              <% if form.object.new_record? %>
+                  <%= link_to t("cancel"), appointments_path, class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+              <% else %>
+                  <%= link_to t("cancel"), appointment_path(@appointment), class:"inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+              <% end %>
+            </div>
+          <% end %>  
+        </div> 
+      </div>
+        </div>
+</div>
 <% end %>
+</div>
