--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,6 +1,5 @@
 <%= content_for :title, "Appointments" %>
 <%= turbo_stream_from :appointments %>
-<% content_for :sidenav do %><% end %>
 
 <div>
   <%= render partial: "shared/sidenav" %>
@@ -12,76 +11,71 @@
             <div class="sm:flex sm:items-center">
               <div class="sm:flex-auto">
                 <h1 class="text-xl font-semibold text-gray-900">Appointments</h1>
+                <!--
                 <div class="text-sm font-medium mt-2 text-gray-700">
                   <span class="text-tokanisecondary-500">Sort by:</span>
-                  <%= sortable @appointments, :ref_number, "Ref number", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :start_time, "Start time", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :finish_time, "Finish time", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :duration, "Duration", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :modality, "Modality", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :sub_type, "Sub type", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :gender_req, "Gender req", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :admin_notes, "Admin notes", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :notes, "Notes", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :details, "Details", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :status, "Status", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :interpreter_type, "Interpreter type", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :billing_notes, "Billing notes", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :canceled_by, "Canceled by", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :cancel_reason_code, "Cancel reason code", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :lock_version, "Lock version", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :time_zone, "Time zone", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :confirmation_date, "Confirmation date", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :confirmation_phone, "Confirmation phone", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :confirmation_notes, "Confirmation notes", class: "text-gray-700 mr-1" %>
-                  <%= sortable @appointments, :home_health_appointment, "Home health appointment", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :name, "Name", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :contact_name, "Contact name", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :email, "Email", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :address, "Address", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :city, "City", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :state, "State", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :zip_code, "Zip code", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :active, "Active", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :backport_id, "Backport", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :notes, "Notes", class: "text-gray-700 mr-1" %>
+                  <%= sortable @sites, :contact_phone, "Contact phone", class: "text-gray-700 mr-1" %>
                 </div>
-                
+                -->
               </div>
-              <!-- <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-                <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto">Add Appointment</button>
-              </div> -->
+               <!-- <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none"> -->
+                <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                  <%= link_to t("shared.scaffold.new.title", model: "Appointment"), new_appointment_path, class: "inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto" %>
+                </div>
+                <!-- <button type="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto" onclick="window.location.href='/sites/new'">New Site</button> -->
+              <!-- </div> -->
             </div>
             <div class="-mx-4 mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:-mx-6 md:mx-0 md:rounded-lg">
               <table class="min-w-full divide-y divide-gray-300">
                 <thead class="bg-gray-50">
                   <tr>
-                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6">Appointment Number</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Date/Time</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Duration</th>
+                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "ID" %></th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Customer</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Modality</th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Language</th>
-                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 sm:table-cell">Modality</th>
-                    <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Status</th>
-                    <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                      <span class="sr-only">Edit</span>
-                    </th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Duration</th>
+                    <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Start Time</th>
+                    <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Edit</th>  
                   </tr>
                 </thead>
                 <tbody class="divide-y divide-gray-200 bg-white">
                 <% @appointments.each do |appointment| %>
                   <tr>
                     <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-                        <%= appointment.ref_number %>
+                      <%= link_to appointment.id, appointment_path(appointment) %>
                       <dl class="font-normal lg:hidden">
-                        <dt class="sr-only">Date/Time</dt>
-                        <dd class="mt-1 truncate text-gray-700"><%= appointment.start_time %></dd>
-                        <dt class="sr-only">Duration</dt>
-                        <dd class="mt-1 truncate text-gray-700"><%= appointment.duration %></dd>
+                        <dt class="sr-only">Customer</dt>
+                        <dd class="mt-1 truncate text-gray-700"><%= appointment.customer&.name %></dd>
+                        <dt class="sr-only">Modality</dt>
+                        <dd class="mt-1 truncate text-gray-700"><%= appointment.modality.titleize %></dd>
                         <dt class="sr-only">Language</dt>
-                        <dd class="mt-1 truncate text-gray-500">Need to add</dd>
+                        <dd class="mt-1 truncate text-gray-500"><%= appointment.language&.name %></dd>
+                        <dt class="sr-only">Duration</dt>
+                        <dd class="mt-1 truncate text-gray-500"><%= appointment.duration %> minutes</dd>
+                        <dt class="sr-only">Start Time</dt>
+                        <dd class="mt-1 truncate text-gray-500"><%= appointment.start_time %></dd>
                       </dl>
                     </td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.start_time %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.duration %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell">Need to add</td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= appointment.modality %></td>
-                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell"><%= appointment.status %></td>
-                    <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                      <%= link_to "Edit", edit_appointment_path(appointment), class: "text-tokanisecondary-600 hover:text-tokanisecondary-900" %>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.customer&.name %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.modality.titleize %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.language&.name %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.duration %> minutes</td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.start_time.strftime("%a %Y-%m-%d, %l:%M %p (%z)") %></td>
+                    <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell">
+                      <a href="<%= edit_appointment_path(appointment) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= appointment.id %></span></a>
                     </td>
                   </tr>
                 <% end %>
-                  <!-- More appointments... -->
                 </tbody>
               </table>
             </div>
@@ -89,10 +83,10 @@
         </div>
       </div>
       <% if @pagy.pages > 1 %>
-    <div class="my-6 text-center">
-      <%== pagy_nav(@pagy) %>
-    </div>
-  <% end %>
+        <div class="my-6 text-center">
+          <%== pagy_nav(@pagy) %>
+        </div>
+      <% end %>
     </main>
   </div>
 </div>
