--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -7,3 +7,4 @@
 <%= nav_link_to "Agencies", agencies_path, class: "nav-link" %>
 <%= nav_link_to "Providers", providers_path, class: "nav-link" %>
 <%= nav_link_to "Recipients", recipients_path, class: "nav-link" %>
+<%= nav_link_to "Customer Categories", customer_categories_path, class: "nav-link" %>
