--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -39,7 +39,7 @@
               <table class="min-w-full divide-y divide-gray-300">
                 <thead class="bg-gray-50">
                   <tr>
-                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "ID" %></th>
+                    <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "Ref Numb" %></th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Customer</th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Modality</th>
                     <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Language</th>
@@ -52,7 +52,7 @@
                 <% @appointments.each do |appointment| %>
                   <tr>
                     <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-                      <%= link_to appointment.id, appointment_path(appointment) %>
+                      <%= link_to appointment.ref_number, appointment_path(appointment) %>
                       <dl class="font-normal lg:hidden">
                         <dt class="sr-only">Customer</dt>
                         <dd class="mt-1 truncate text-gray-700"><%= appointment.customer&.name %></dd>
