--- a/app/views/dashboard/agency_admin.html.erb
+++ b/app/views/dashboard/agency_admin.html.erb
@@ -168,7 +168,7 @@
                   <table class="min-w-full divide-y divide-gray-200">
                     <thead>
                       <tr>
-                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col">Transaction</th>
+                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col">Recent Appointment List</th>
                         <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Amount</th>
                         <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col">Status</th>
                         <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Date</th>
