--- a/app/views/customers/customer_details.html.erb
+++ b/app/views/customers/customer_details.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "shared/sidenav" %>
+<%# render partial: "shared/sidenav" %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
