--- a/app/views/dashboard/interpreter.html.erb
+++ b/app/views/dashboard/interpreter.html.erb
@@ -23,7 +23,7 @@
 <% content_for :sidenav do %><% end %>
 
 <div>
-  <%= render partial: "shared/sidenav" %>
+  <%= render partial: "shared/interpreter_sidenav" %>
   <div class="flex flex-1 flex-col md:pl-64">
     <main class="flex-1">
       <div class="py-6">
