--- a/app/views/interpreters/availability.html.erb
+++ b/app/views/interpreters/availability.html.erb
@@ -1,3 +1,22 @@
+<div class="flex flex-1 flex-col md:pl-64">
+  <main class="flex-1">
+    <div class="py-6">
+
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
+        <div class="px-4 sm:px-6 lg:px-6">
+          <div class="sm:flex sm:items-center pb-6">
+              <div class="sm:flex-auto"> 
+                <h1 class="text-xl font-semibold text-gray-900">
+                 <span class="text-tokanisecondary-500">
+                  <%= current_user.full_name %>
+                  </span>
+                  <span class="text-tokaniprimary-600 font-light mx-2">/Availability</span>    
+                </h1>
+              </div>      
+            </div>
+        <div class="p-8 bg-white rounded shadow">
+        <div class="px-4 sm:px-6 lg:px-8 container">
+
 <div data-controller="tabs" data-tabs-active-tab="-mb-px border-l border-t border-r rounded-t">
   <ul class="list-reset list-none flex border-b">
     <li class="-mb-px mr-1" data-tabs-target="tab" data-action="click->tabs#change">
@@ -51,4 +70,11 @@
 	<div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
     Tab panel 7
   </div>
+</div>
+        </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
