--- a/app/views/interpreters/dashboard.html.erb
+++ b/app/views/interpreters/dashboard.html.erb
@@ -1,3 +1,22 @@
+<div class="flex flex-1 flex-col md:pl-64">
+	<main class="flex-1">
+	  <div class="py-6">
+  
+		<div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
+		  <div class="px-4 sm:px-6 lg:px-6">
+			<div class="sm:flex sm:items-center pb-6">
+				<div class="sm:flex-auto"> 
+				  <h1 class="text-xl font-semibold text-gray-900">
+				   <span class="text-tokanisecondary-500">
+					<%= current_user.full_name %>
+					</span>
+					<span class="text-tokaniprimary-600 font-light mx-2">/Dashboard</span>    
+				  </h1>
+				</div>      
+			  </div>
+		  <div class="p-8 bg-white rounded shadow">
+		  <div class="px-4 sm:px-6 lg:px-8 container">
+
 <div class="mx-auto max-w-7xl bg-white py-24 px-6 lg:px-8">
   <div class="mt-5 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-8 lg:space-y-0">
     <div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
@@ -34,4 +53,11 @@
 	<div class="mt-5">
 		<%= pie_chart [["Assigned", 55], ["Accepted", 45]] %>
 	</div>
+</div>
+      </div>
+      </div>
+      </div>
+    </div>
+    </div>
+  </main>
 </div>
