--- a/app/views/interpreters/profile.html.erb
+++ b/app/views/interpreters/profile.html.erb
@@ -1,3 +1,23 @@
+<div class="flex flex-1 flex-col md:pl-64">
+	<main class="flex-1">
+	  <div class="py-6">
+  
+		<div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
+		  <div class="px-4 sm:px-6 lg:px-6">
+			<div class="sm:flex sm:items-center pb-6">
+				<div class="sm:flex-auto"> 
+				  <h1 class="text-xl font-semibold text-gray-900">
+				   <span class="text-tokanisecondary-500">
+					<%= current_user.full_name %>
+					</span>
+					<span class="text-tokaniprimary-600 font-light mx-2">/Profile</span>    
+				  </h1>
+				</div>      
+			  </div>
+		  <div class="p-8 bg-white rounded shadow">
+		  <div class="px-4 sm:px-6 lg:px-8 container">
+
+
 <div class="container ml-10">
 	<div data-controller="tabs" data-tabs-active-tab="-mb-px border-l border-t border-r rounded-t">
 		<ul class="list-reset list-none flex border-b w-3/4">
@@ -91,4 +111,11 @@
 			</div>
 		</div>
 	</div>
+</div>
+		  </div>
+		  </div>
+		  </div>
+		</div>
+	  </div>
+	</main>
 </div>
