--- a/app/views/agencies/_form.html.erb
+++ b/app/views/agencies/_form.html.erb
@@ -28,11 +28,10 @@
               <%= physical_address.text_field :postal_code, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
             </div>
           <% end %>
-          <br>
-          <div>
-            <%= form.button button_text(form.send(:submit_default_value)), class: "btn btn-primary" %>
+          <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
+            <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
             <% if form.object.new_record? %>
-              <%= link_to t("cancel"), agencies_path, class: "btn btn-white" %>
+              <%= link_to t("cancel"), agencies_path, class: "inline-flex justify-center rounded-md border border-transparent bg-tokaniprimary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
             <% else %>
               <%= link_to t("cancel"), agency_path(@agency), class: "btn btn-white" %>
             <% end %>
