--- a/app/views/agencies/new.html.erb
+++ b/app/views/agencies/new.html.erb
@@ -1,41 +1,25 @@
 <%= content_for :title, t("shared.scaffold.new.title", model: "Agency") %>
-
 <div class="flex flex-1 flex-col md:pl-64">
 	<main class="flex-1">
 	  <div class="py-6">
-  
-		<div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
-		  <div class="px-4 sm:px-6 lg:px-6">
-			<div class="sm:flex sm:items-center pb-6">
-				<div class="sm:flex-auto"> 
-				  <h1 class="text-xl font-semibold text-gray-900">
-				   <span class="text-tokanisecondary-500">
-            <%= link_to "Agencies", agencies_path, class: "text-tokanisecondary-500" %>
-					</span>
-					<span class="text-tokaniprimary-600 font-light mx-2">/ New Agency</span>    
-				  </h1>
-				</div>      
-			  </div>
-		  <div class="p-8 bg-white rounded shadow">
-		  <div class="px-4 sm:px-6 lg:px-8 container">
-
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="h3">
-      <%= link_to "Agencies", agencies_path, class: "text-black" %>
-      <span class="text-gray-400 font-light mx-2">\</span>
-      <%= t("shared.scaffold.new.title", model: "Agency") %>
-    </h1>
-  </div>
-
-  <div class="p-8 bg-white rounded shadow">
-    <%= render "tokani_form", agency: @agency %>
-  </div>
-</div>
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
+        <div class="px-4 sm:px-6 lg:px-6">
+          <div class="p-8 bg-white rounded shadow">
+            <div class="px-4 sm:px-6 container">
+              <div class="container px-4 mx-auto my-8">
+                <div class="flex items-center justify-between mb-4">
+                  <h1 class="h3">
+                    <%= link_to "Agencies", agencies_path, class: "text-black" %>
+                    <span class="text-gray-400 font-light mx-2">\</span>
+                    <%= t("shared.scaffold.new.title", model: "Agency") %>
+                  </h1>
+                </div>
+                <%= render "tokani_form", agency: @agency %>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      </div>
-      </div>
-    </div>
     </div>
   </main>
 </div>
