--- a/app/views/agencies/show.html.erb
+++ b/app/views/agencies/show.html.erb
@@ -1,17 +1,29 @@
 <%= content_for :title, "Agencies ##{@agency.name}" %>
 <%= turbo_stream_from @agency %>
-
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="h3">
-      <%= link_to "Agencies", agencies_path, class: "text-black" %>
-      <span class="text-gray-400 font-light mx-2">\</span>
-      Agency :: <%= @agency.name %>
-    </h1>
-    <%= link_to t("edit"), edit_agency_path(@agency), class: "btn btn-white" %>
-  </div>
-
-  <div class="p-8 bg-white rounded shadow">
-    <%= render @agency %>
-  </div>
+<div class="flex flex-1 flex-col md:pl-64">
+  <main class="flex-1">
+    <div class="py-6">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
+        <div class="px-4 sm:px-6 lg:px-8">
+          <div class="sm:flex sm:items-center pb-6">
+              <div class="sm:flex-auto"> 
+                <h1 class="text-xl font-semibold text-gray-900">
+                  <%= link_to "Agencies", agencies_path, class: "text-tokanisecondary-500" %>
+                    <span class="text-gray-400 font-light mx-2">\</span>
+                    <%= @agency.name %>
+                </h1>
+              </div>
+                <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                  <%= link_to t("edit"), edit_agency_path(@agency), class: "btn btn-tokani_purple" %>
+                </div>
+              </div>
+              <div class="p-8 bg-white rounded shadow">
+                <%= render @agency %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </div>
