--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,9 @@
         <% else %>
           <% if current_account_user.interpreter? %>
             <%= render partial: 'shared/interpreter_sidenav' %>
-          <% end %>
-          <% if !current_account_user.interpreter? %>
+          <% elsif !current_account_user.interpreter? %>
+            <%= render partial: 'shared/sidenav' %>
+          <% elsif current_user.admin? %>
             <%= render partial: 'shared/sidenav' %>
           <% end %>
         <% end %>
